[project]
name = "pytest_robotframework"
version = "4.1.2"
description = "a pytest plugin that can run both python and robotframework tests while generating robot reports for them"
authors = [
    { name = "DetachHead", email = "detachhead@users.noreply.github.com" },
]
dependencies = [
    "pytest<9,>=7",
    "robotframework<8.0.0,>=6.1",
    "basedtyping<0.2,>=0.1.0",
    "ansi2html>=1.9.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/detachhead/pytest-robotframework"

[project.entry-points.pytest11]
robotframework = "pytest_robotframework._internal.pytest.plugin"

[tool.pyprojectx]
pdm = "pdm==2.15.1"

[tool.pdm.scripts]
update = "pdm update"
refresh_lockfile = "pdm lock --update-reuse"
test = "pytest -n auto"
typecheck = { composite = [
    "basedpyright",
    "basedpyright --verifytypes pytest_robotframework --ignoreexternal",
] }
ruff_check = { composite = ['ruff check', 'ruff format --check --diff'] }
ruff_fix = { composite = ['ruff check --fix', 'ruff format'] }
pylint = 'pylint pytest_robotframework tests'
robocop = 'robocop'
robotidy = 'robotidy --color --check --diff .'
open_docs = 'pdoc pytest_robotframework'
clear_pycache = 'python scripts/clear_pycache.py'

[tool.pdm.dev-dependencies]
lint = [
    "basedpyright>=1.10.1",
    # https://github.com/pylint-dev/pylint/pull/9484 isn't released yet
    "pylint@git+https://github.com/pylint-dev/pylint@e5e6ca713b3e8ce8037ca8bd2d39154b1df016e7",
    "ruff>=0.2.0",
    "robotframework-robocop>=4.1.0",
    "robotframework-tidy>=4.5.0",
]
test = [
    "lxml>=4.9.3",
    "lxml-stubs>=0.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
]
docs = ["pdoc>=14.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pylint.MASTER]
fail-on = "I"
bad-names = ["foo", "bar", "baz", "retval"]
load-plugins = [
    # we don't use all of these but enabling them all for completeness since there's no error if a rule is not found
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_caluse",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.emptystring",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.magic_value",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint."MESSAGE CONTROL"]
disable = ["R", "C", "E", "F", "W", "I"]
enable = [
    "useless-suppression",
    # rules that have not yet been implemented in ruff. once all of these are implemented in ruff, we should remove pylint
    # (see https://github.com/astral-sh/ruff/issues/970):
    "access-member-before-definition",
    "assignment-from-none",
    "dict-iter-missing-items",
    "invalid-bool-returned",
    "invalid-getnewargs-ex-returned",
    "invalid-getnewargs-returned",
    "invalid-index-returned",
    "invalid-length-hint-returned",
    "invalid-slice-index",
    "invalid-slice-step",
    "invalid-slots",
    "invalid-slots-object",
    "invalid-unicode-codec",
    "logging-format-truncated",
    "logging-unsupported-format",
    "method-hidden",
    "modified-iterating-dict",
    "potential-index-error",
    "relative-beyond-top-level",
    "abstract-method",
    "arguments-out-of-order",
    "attribute-defined-outside-init",
    "confusing-with-statement",
    "deprecated-decorator",
    "deprecated-module",
    "differing-param-doc",
    "global-variable-undefined",
    "missing-param-doc",
    "modified-iterating-list",
    "multiple-constructor-doc",
    "non-parent-init-called",
    "overlapping-except",
    "preferred-module",
    "raising-format-tuple",
    "redefined-outer-name",
    "redefined-slots-in-subclass",
    "redundant-returns-doc",
    "redundant-yields-doc",
    "shallow-copy-environ",
    "useless-param-doc",
    "useless-parent-delegation",
    "useless-type-doc",
    "using-constant-test",
    "bad-file-encoding",
    "dict-init-mutate",
    "use-implicit-booleaness-not-comparison",
    "chained-comparison",
    "confusing-consecutive-elif",
    "consider-using-join",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "consider-using-namedtuple-or-dataclass",
    "consider-using-tuple",
    "simplifiable-condition",
    "simplify-boolean-expression",
]

[tool.pylint.REPORTS]
reports = "no"
output-format = "colorized"
score = "no"

[tool.pylint.FORMAT]
max-line-length = 200

[tool.pytest.ini_options]
addopts = ['-p', 'no:robotframework', '--ignore=tests/fixtures', '-vv']
xfail_strict = true
enable_assertion_pass_hook = true

[tool.basedpyright]
ignore = ["pw"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "all"
reportMissingTypeStubs = false           # https://github.com/robotframework/robotframework/issues/4822
reportImplicitStringConcatenation = true # ideally this should be off and handled by the ruff formatter https://github.com/astral-sh/ruff/issues/9965
enableTypeIgnoreComments = false         # https://github.com/DetachHead/basedpyright/issues/55
reportUnusedImport = false               # covered by ruff (has quickfix)
reportUnusedVariable = false             # covered by ruff (has quickfix)

[tool.ruff]
unsafe-fixes = true
target-version = "py38"
respect-gitignore = true
line-length = 100
preview = true
extend-exclude = ["pw"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN",     # flake8-annotations (covered by pyright)
    "EM",      # flake8-errmsg
    "FIX",     # flake8-fixme
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR1722", # Use `sys.exit()` instead of `exit`
    "PLW2901", # `for` loop variable overwritten by assignment target
    "PLE0605", # Invalid format for `__all__`, must be `tuple` or `list` (covered by pyright)
    "PLR0911", # Too many return statements
    "PLW0603", # Using the global statement is discouraged
    "PLC0105", # `TypeVar` name does not reflect its covariance
    "PLC0414", # Import alias does not rename original package (used by pyright for explicit re-export)
    "RUF013",  # PEP 484 prohibits implicit Optional (covered by pyright)
    "RUF016",  # Slice in indexed access to type (covered by pyright)
    "TRY002",  # Create your own exception
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D10",     # Missing docstring
    "D203",    # 1 blank line required before class docstring
    "D205",    # 1 blank line required between summary line and description
    "D209",    # Multi-line docstring closing quotes should be on a separate line
    "D212",    # Multi-line docstring summary should start at the first line
    "D213",    # Multi-line docstring summary should start at the second line
    "D400",    # First line should end with a period
    "D401",    # First line should be in imperative mood
    "D403",    # First word of the first line should be properly capitalized
    "D404",    # First word of the docstring should not be `This`
    "D405",    # Section name should be properly capitalized
    "D406",    # Section name should end with a newline
    "D415",    # First line should end with a period, question mark, or exclamation point
    "D418",    # Function/Method decorated with @overload shouldn't contain a docstring (vscode supports it)
    "D413",    # blank-line-after-last-section
    "PT013",   # Found incorrect import of pytest, use simple import pytest instead (only for bad linters that can't check the qualname)
    "TD002",   # Missing author in TODO
    "CPY001",  # missing-copyright-notice
    "C901",    # max-complexity
    "SLF001",  # private-member-access (covered by pyright)
    "PLC2701", # import-private-name (covered by pyright)
    "UP006",   # non-pep585-annotation (covered by pyright)
    "UP007",   # non-pep604-annotation (covered by pyright)
    "UP035",   # deprecated-import (covered by pyright)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC003",  # explicit-string-concatenation (https://github.com/astral-sh/ruff/issues/9965)
    "W293",    # modifies strings (https://github.com/astral-sh/ruff/issues/10038)
    "PLE1507", # invalid-envvar-value (covered by pyright)
    "D200",    # fits-on-one-line (https://github.com/astral-sh/ruff/issues/6269)
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["A001", "A002", "N"] # we don't control names in 3rd party modules
"tests/**/*.py" = [
    "S101", # Use of assert detected (pytest uses assert statements)
]
[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"contextlib.AbstractContextManager".msg = "Use `typing.ContextManager` instead because it works at runtime on python 3.8."

[tool.robotidy]
configure = [
    "AlignTemplatedTestCases:enabled=True",
    "RenameKeywords:enabled=True",
    "RenameTestCases:enabled=True",
    "SplitTooLongLine:line_length=160",
]


[tool.robocop]
paths = ["tests"]
reports = ["all"]
exclude = [
    "not-allowed-char-in-filename",
    "non-local-variables-should-be-uppercase",
    "section-variable-not-uppercase",
    "too-many-calls-in-test-case",
    "too-many-calls-in-keyword",
    "too-long-test-case",
    "too-many-arguments",
    "not-capitalized-test-case-title",
    "file-too-long",
    "too-long-keyword",
    "missing-doc-resource-file",
    "missing-doc-keyword",
    "missing-doc-suite",
    "missing-doc-test-case",
]
configure = [
    "todo-in-comment:enabled:False",
    "too-many-test-cases:enabled:False",
    "too-many-calls-in-keyword:severity:W",
    "can-be-resource-file:severity:W",
    "missing-doc-suite:severity:W",
    "line-too-long:line_length:160",
    "possible-variable-overwriting:severity:E",
    "could-be-test-tags:severity:E",
    "tag-already-set-in-test-tags:severity:E",
    "unused-variable:severity:W",
    "unnecessary-string-conversion:severity:W",
    "expression-can-be-simplified:severity:W",
    "can-be-resource-file:severity:W",
]
